--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="products">
-            {{% block content %}}{{% endblock %}}
+            {% block content %}{% endblock %}
         </div>
     </div>
 
