--- a/templates/products.html
+++ b/templates/products.html
@@ -1,15 +1,14 @@
 {% extends 'index.html' %}
 
-{%block content %}
-    {% for card in cards %}
-       {% for product in products %}
-            <div class="product">
-                <img src="{{ url_for('static', filename=product['image']) }}" alt="{{ product['name'] }}" class="product-image">
-                <div class="product-details">
-                    <h2>{{ product['name'] }}</h2>
-                    <p>{{ product['description'] }}</p>
-                    <p><strong>Цена: ${{ product['price'] }}</strong></p>
-                </div>
+{% block content %}
+    {% for product in products %}
+        <div class="product">
+            <img src="{{ url_for('static', filename=product['image']) }}" alt="{{ product['name'] }}" class="product-image">
+            <div class="product-details">
+                <h2>{{ product['name'] }}</h2>
+                <p>{{ product['description'] }}</p>
+                <p><strong>Цена: ${{ product['price'] }}</strong></p>
             </div>
-            {% endfor %}
+        </div>
     {% endfor %}
+{% endblock %}
