--- a/static/styles.css
+++ b/static/styles.css
@@ -9,13 +9,15 @@ body {
 header {
     background-color: #35ad23;
     color: #fff;
-    padding: 10px 0;
+    padding: 2px;
     text-align: center;
 }
+
 
 .container {
     width: 80%;
     margin: 20px auto;
+    padding-bottom: 50px;
 }
 
 .products {
@@ -89,4 +91,34 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+.product-detail-page .product-detail {
+    display: flex;
+    align-items: flex-start;
+    position: relative; /* Нужно для абсолютного позиционирования внутри */
+}
+
+.product-detail-page .product-image-container {
+    margin-right: 20px; /* Отступ справа */
+    margin-top: -20px; /* Отступ сверху */
+}
+
+.product-detail-page .product-image {
+    width: 300px; /* Фиксированная ширина изображения */
+    height: auto; /* Поддерживать пропорции изображения */
+}
+
+.product-detail-page .product-details {
+    flex: 1;
+    text-align: left; /* Выровнять текст влево */
+    width: 250px;
+    font-size: 20px; /* Увеличить размер текста */
+}
+
+.product-detail-page .product-price {
+    margin: 0; /* Обнуление отступов */
+    position: absolute; /* Абсолютное позиционирование */
+    top: 300px; /* Регулируемый отступ сверху */
+    left: 0px; /* Регулируемый отступ слева */
 }
