--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,13 +1,23 @@
 {% extends 'index.html' %}
 
 {% block content %}
-    <div class="product-detail">
-        <img src="{{ url_for('static', filename='img/' + product['img']) }}" alt="{{ product['name'] }}" class="product-image">
-        <div class="product-details">
-            <h2>{{ product['name'] }}</h2>
-            <p>{{ product['description'] }}</p>
-            <p><strong>Цена: {{ product['price'] }} грн</strong></p>
-            <a href="{{ url_for('index') }}" class="btn">Назад</a>
+    <div class="product-detail-page">
+        <div class="product-detail">
+            <div class="product-image-container">
+                <img src="{{ url_for('static', filename='img/' + product['img']) }}" alt="{{ product['name'] }}" class="product-image">
+            </div>
+            <div class="product-details">
+                <h2>{{ product['name'] }}</h2>
+                <p class="product-price"><strong>Цена: {{ product['price'] }} грн</strong></p> <!-- Цена под названием -->
+                <p>{{ product['description'] }}</p>
+                <p><strong>Дисплей:</strong> {{ product['display'] }}</p>
+                <p><strong>ОС:</strong> {{ product['os'] }}</p>
+                <p><strong>Экран:</strong> {{ product['screen'] }}</p>
+                <p><strong>Батарея:</strong> {{ product['battery'] }}</p>
+                <p><strong>Процессор:</strong> {{ product['processor'] }}</p>
+                <p><strong>Камера:</strong> {{ product['camera'] }}</p>
+                <a href="{{ url_for('index') }}" class="btn">Назад</a>
+            </div>
         </div>
     </div>
 {% endblock %}
