--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,46 @@
 </head>
 <body>
     <header>
-        <h1>Магазин</h1>
+        <div class="header-container">
+            <input type="text" id="search" placeholder="Поиск модели...">
+            <h1>Магазин</h1>
+        </div>
     </header>
 
     <div class="container">
         <div class="products">
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% for product in products %}
+                <div class="product">
+                    <a href="{{ url_for('product_detail', product_id=product.id) }}">
+                        <h2>{{ product.name }}</h2>
+                        <p>Цена: {{ product.price }} грн</p>
+                        <img src="{{ url_for('static', filename='img/' + product.img) }}" alt="{{ product.name }}" width="200">
+                    </a>
+                </div>
+            {% endfor %}
+            {% endblock %}
         </div>
     </div>
 
     <footer>
         <p>Контакты: email@example.com | Телефон: +14881488</p>
     </footer>
+
+    <script>
+        document.getElementById('search').addEventListener('input', function() {
+            const searchValue = this.value.toLowerCase();
+            const products = document.querySelectorAll('.product');
+
+            products.forEach(product => {
+                const productName = product.querySelector('h2').textContent.toLowerCase();
+                if (productName.includes(searchValue)) {
+                    product.style.display = 'block';
+                } else {
+                    product.style.display = 'none';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
