--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <input type="text" id="search" placeholder="Поиск модели...">
-            <h1>Магазин</h1>
+            <h1>Магазин Техники</h1>
         </div>
     </header>
 
@@ -31,7 +31,7 @@
     </div>
 
     <footer>
-        <p>Контакты: email@example.com | Телефон: +14881488</p>
+        <p>Контакты: magazin@example.com | Телефон: +38 (099) 1547584</p>
     </footer>
 
     <script>
