--- a/static/styles.css
+++ b/static/styles.css
@@ -70,6 +70,14 @@ header h1 {
 
 .product-details {
     margin-top: 10px;
+    border-top: 4px solid #35ad23; /* Верхняя зелёная полоска */
+    border-bottom: 4px solid #35ad23; /* Нижняя зелёная полоска */
+}
+
+.product-price {
+    font-size: 20px;
+    margin: 10px 0;
+    color: #e74c3c;
 }
 
 form div {
@@ -79,6 +87,8 @@ form div {
 form input {
     padding: 5px;
     width: 100%;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
 form button {
@@ -87,6 +97,7 @@ form button {
     color: #fff;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 form button:hover {
@@ -142,4 +153,30 @@ footer {
     position: absolute;
     top: 400px;
     left: 0px;
+}
+
+.buy-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+}
+
+.buy-button:hover {
+    background-color: #0056b3;
+}
+
+.product a {
+    text-decoration: none; /* Убирает подчеркивание ссылок */
+    color: inherit; /* Делает цвет ссылки таким же, как и у текста вокруг */
+    font-family: Arial, sans-serif; /* Изменяет шрифт для ссылок */
+}
+
+.product a:hover {
+    color: #007bff; /* Меняет цвет ссылки при наведении */
 }
