--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,6 +1,12 @@
-{% extends 'index.html' %}
-
-{% block content %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Детали продукта</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+</head>
+<body>
     <div class="product-detail-page">
         <div class="product-detail">
             <div class="product-image-container">
@@ -8,7 +14,7 @@
             </div>
             <div class="product-details">
                 <h2>{{ product['name'] }}</h2>
-                <p class="product-price"><strong>Цена: {{ product['price'] }} грн</strong></p> <!-- Цена под названием -->
+                <p class="product-price"><strong>Цена: {{ product['price'] }} грн</strong></p>
                 <p>{{ product['description'] }}</p>
                 <p><strong>Дисплей:</strong> {{ product['display'] }}</p>
                 <p><strong>ОС:</strong> {{ product['os'] }}</p>
@@ -17,7 +23,15 @@
                 <p><strong>Процессор:</strong> {{ product['processor'] }}</p>
                 <p><strong>Камера:</strong> {{ product['camera'] }}</p>
                 <a href="{{ url_for('index') }}" class="btn">Назад</a>
+                <button class="buy-button" onclick="openPurchasePage()">Купить</button>
             </div>
         </div>
     </div>
-{% endblock %}
+
+    <script>
+        function openPurchasePage() {
+            window.open('{{ url_for('purchase_info') }}', '_blank');
+        }
+    </script>
+</body>
+</html>
